k8s/Other Setups/manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: manager
  template:
    metadata:
      labels:
        component: manager
    spec:
      containers:
        - name: manager
          image: eliudarudo/complex-voting-app-manager
          ports:
            - containerPort: 3004
