k8s/Other Setups/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongodb
  template:
    metadata:
      labels:
        component: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.0.9
          ports:
            - containerPort: 27017
