k8s/Other Setups/voter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: voter
  template:
    metadata:
      labels:
        component: voter
    spec:
      containers:
        - name: voter
          image: eliudarudo/complex-voting-app-voter
          ports:
            - containerPort: 3000
