k8s/Other Setups/wsserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wsserver
  template:
    metadata:
      labels: 
        component: wsserver
    spec:
      containers:
        - name: wsserver
          image: eliudarudo/complex-voting-app-ws-server
          ports:
            - containerPort: 3003
