k8s/Other Setups/manager-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: manager
  ports:
    - port: 3004
      targetPort: 3004
