k8s/Other Setups/results-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: results
  ports:
    - port: 3002
      targetPort: 3002
