k8s/Other Setups/voter-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voter-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: voter
  ports:
    - port: 3000
      targetPort: 3000
