k8s/Other Setups/wsserver-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsserver-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: wsserver
  ports:
    - port: 3003
      targetPort: 3003
