k8s/Other Setups/ingress-service-with-rewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /wsserver/?(.*)
            backend:
              serviceName: wsserver-cluster-ip-service
              servicePort: 3003
          - path: /manager/?(.*)
            backend:
              serviceName: manager-cluster-ip-service
              servicePort: 3004
