k8s/Other Setups/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  
spec:
  rules:
    - http:
        paths:
          - path: /voter
            backend:
              serviceName: voter-cluster-ip-service
              servicePort: 3000
          - path: /admin
            backend:
              serviceName: admin-cluster-ip-service
              servicePort: 3001
          - path: /results
            backend:
              serviceName: results-cluster-ip-service
              servicePort: 3002
          - path: /socket.io
            backend:
              serviceName: wsserver-cluster-ip-service
              servicePort: 3003
